--- a/rtsp_properties.ui
+++ b/rtsp_properties.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>435</height>
+    <width>424</width>
+    <height>531</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -34,6 +34,9 @@
      <layout class="QFormLayout" name="groupBoxOption_layout">
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+      <property name="formAlignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
       </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxAuto">
@@ -183,6 +186,9 @@
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
+      <property name="formAlignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
       <item row="0" column="0">
        <widget class="QLabel" name="labelAddress">
         <property name="sizePolicy">
@@ -244,6 +250,12 @@
          </item>
          <item>
           <widget class="QSpinBox" name="spinBoxPort">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -304,6 +316,9 @@
      <layout class="QFormLayout" name="groupBoxAuthentication_layout">
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+      <property name="formAlignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
       </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxEnableAuthentication">
