--- a/rtsp_properties.ui
+++ b/rtsp_properties.ui
@@ -2,24 +2,13 @@
 <ui version="4.0">
  <class>RtspProperties</class>
  <widget class="QDialog" name="RtspProperties">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>424</width>
-    <height>531</height>
-   </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
    <string>RtspServer.Properties</string>
   </property>
   <layout class="QVBoxLayout" name="rtspProperties_layout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetMinimumSize</enum>
+   </property>
    <item>
     <widget class="QGroupBox" name="groupBoxOption">
      <property name="sizePolicy">
@@ -32,26 +21,14 @@
       <string>RtspServer.Properties.Options</string>
      </property>
      <layout class="QFormLayout" name="groupBoxOption_layout">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
-      <property name="formAlignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-      </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxAuto">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.AutoStart</string>
         </property>
@@ -59,31 +36,16 @@
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="labelOutputOptions">
-        <property name="maximumSize">
-         <size>
-          <width>120</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.Output</string>
+        </property>
+        <property name="buddy">
+         <cstring>labelOutputOptionsTip</cstring>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLabel" name="labelOutputOptionsTip">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>400</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.Output.Tip</string>
         </property>
@@ -91,25 +53,16 @@
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="labelEnabledAudioTracks">
-        <property name="maximumSize">
-         <size>
-          <width>120</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.EnabledAudioTracks</string>
+        </property>
+        <property name="buddy">
+         <cstring>widgetEnabledAudioTracks</cstring>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QWidget" name="widgetEnabledAudioTracks" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <property name="leftMargin">
           <number>0</number>
@@ -125,6 +78,12 @@
          </property>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack1">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>1</string>
            </property>
@@ -132,6 +91,12 @@
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>2</string>
            </property>
@@ -139,6 +104,12 @@
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack3">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>3</string>
            </property>
@@ -146,6 +117,12 @@
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack4">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>4</string>
            </property>
@@ -153,6 +130,12 @@
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack5">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>5</string>
            </property>
@@ -160,10 +143,29 @@
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxAudioTrack6">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>6</string>
            </property>
           </widget>
+         </item>
+         <item>
+          <spacer name="widgetEnabledAudioSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
@@ -183,11 +185,11 @@
       <string>RtspServer.Properties.Target</string>
      </property>
      <layout class="QFormLayout" name="groupBoxTarget_layout">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-      <property name="formAlignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
       </property>
       <item row="0" column="0">
        <widget class="QLabel" name="labelAddress">
@@ -211,6 +213,9 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="buddy">
+         <cstring>widgetAddress</cstring>
         </property>
        </widget>
       </item>
@@ -279,12 +284,6 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
-           <property name="maximumSize">
-            <size>
-             <width>80</width>
-             <height>16777215</height>
-            </size>
-           </property>
            <property name="text">
             <string>RtspServer.Properties.Target.Address.Copy</string>
            </property>
@@ -314,26 +313,14 @@
       <string>RtspServer.Properties.Authentication</string>
      </property>
      <layout class="QFormLayout" name="groupBoxAuthentication_layout">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
-      <property name="formAlignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-      </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxEnableAuthentication">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Enabled</string>
         </property>
@@ -343,12 +330,6 @@
        <widget class="QLineEdit" name="lineEditRealm">
         <property name="enabled">
          <bool>false</bool>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>16777215</height>
-         </size>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -360,14 +341,11 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>120</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Realm</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineEditRealm</cstring>
         </property>
        </widget>
       </item>
@@ -376,23 +354,14 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>120</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
         </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Username</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineEditUsername</cstring>
         </property>
        </widget>
       </item>
@@ -411,23 +380,14 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>120</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="layoutDirection">
          <enum>Qt::RightToLeft</enum>
         </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Password</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineEditPassword</cstring>
         </property>
        </widget>
       </item>
@@ -479,12 +439,6 @@
          </property>
          <item>
           <widget class="QLabel" name="labelTotalDataTitle">
-           <property name="maximumSize">
-            <size>
-             <width>110</width>
-             <height>16777215</height>
-            </size>
-           </property>
            <property name="text">
             <string>RtspServer.Properties.Status.TotalDataSent</string>
            </property>
@@ -511,12 +465,6 @@
          </item>
          <item>
           <widget class="QLabel" name="labelBitrateTitle">
-           <property name="maximumSize">
-            <size>
-             <width>110</width>
-             <height>16777215</height>
-            </size>
-           </property>
            <property name="text">
             <string>RtspServer.Properties.Status.Bitrate</string>
            </property>
@@ -570,14 +518,17 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widgetFill" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <spacer name="RtspPropertiesverSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item alignment="Qt::AlignRight">
     <widget class="QWidget" name="widgetStartOrStop" native="true">
@@ -602,22 +553,10 @@
       </property>
       <item>
        <widget class="QPushButton" name="pushButtonStart">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
         <property name="minimumSize">
          <size>
           <width>75</width>
           <height>23</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>100</width>
-          <height>16777215</height>
          </size>
         </property>
         <property name="text">
@@ -633,22 +572,10 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButtonStop">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
         <property name="minimumSize">
          <size>
           <width>75</width>
           <height>23</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>100</width>
-          <height>16777215</height>
          </size>
         </property>
         <property name="text">
@@ -677,12 +604,11 @@
   </layout>
   <zorder>groupBoxTarget</zorder>
   <zorder>groupBoxOption</zorder>
-  <zorder>widgetFill</zorder>
   <zorder>groupBoxAuthentication</zorder>
   <zorder>widgetStartOrStop</zorder>
   <zorder>groupBoxStatus</zorder>
+  <zorder>RtspPropertiesverSpacer</zorder>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>checkBoxAuto</tabstop>
   <tabstop>checkBoxAudioTrack1</tabstop>
