--- a/rtsp_properties.ui
+++ b/rtsp_properties.ui
@@ -2,13 +2,24 @@
 <ui version="4.0">
  <class>RtspProperties</class>
  <widget class="QDialog" name="RtspProperties">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>425</width>
+    <height>425</height>
+   </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>RtspServer.Properties</string>
   </property>
   <layout class="QVBoxLayout" name="rtspProperties_layout">
-   <property name="sizeConstraint">
-    <enum>QLayout::SetMinimumSize</enum>
-   </property>
    <item>
     <widget class="QGroupBox" name="groupBoxOption">
      <property name="sizePolicy">
@@ -21,153 +32,58 @@
       <string>RtspServer.Properties.Options</string>
      </property>
      <layout class="QFormLayout" name="groupBoxOption_layout">
-      <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-      </property>
-      <property name="labelAlignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      <property name="rowWrapPolicy">
+       <enum>QFormLayout::WrapAllRows</enum>
       </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxAuto">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.AutoStart</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="1" column="0">
        <widget class="QLabel" name="labelOutputOptions">
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.Output</string>
         </property>
-        <property name="buddy">
-         <cstring>labelOutputOptionsTip</cstring>
-        </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="1" column="1">
        <widget class="QLabel" name="labelOutputOptionsTip">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>RtspServer.Properties.Options.Output.Tip</string>
         </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="labelEnabledAudioTracks">
-        <property name="text">
-         <string>RtspServer.Properties.Options.EnabledAudioTracks</string>
-        </property>
-        <property name="buddy">
-         <cstring>widgetEnabledAudioTracks</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QWidget" name="widgetEnabledAudioTracks" native="true">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <property name="leftMargin">
-          <number>0</number>
-         </property>
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="rightMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
-          <number>0</number>
-         </property>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack1">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>1</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack2">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>2</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack3">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>3</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack4">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>4</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack5">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>5</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QCheckBox" name="checkBoxAudioTrack6">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>6</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="widgetEnabledAudioSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
        </widget>
       </item>
      </layout>
@@ -185,9 +101,6 @@
       <string>RtspServer.Properties.Target</string>
      </property>
      <layout class="QFormLayout" name="groupBoxTarget_layout">
-      <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-      </property>
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
@@ -213,9 +126,6 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-        <property name="buddy">
-         <cstring>widgetAddress</cstring>
         </property>
        </widget>
       </item>
@@ -255,12 +165,6 @@
          </item>
          <item>
           <widget class="QSpinBox" name="spinBoxPort">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -283,6 +187,12 @@
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>80</width>
+             <height>16777215</height>
+            </size>
            </property>
            <property name="text">
             <string>RtspServer.Properties.Target.Address.Copy</string>
@@ -313,14 +223,23 @@
       <string>RtspServer.Properties.Authentication</string>
      </property>
      <layout class="QFormLayout" name="groupBoxAuthentication_layout">
-      <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-      </property>
       <property name="labelAlignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
       <item row="0" column="1">
        <widget class="QCheckBox" name="checkBoxEnableAuthentication">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Enabled</string>
         </property>
@@ -330,6 +249,12 @@
        <widget class="QLineEdit" name="lineEditRealm">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -341,11 +266,14 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Realm</string>
-        </property>
-        <property name="buddy">
-         <cstring>lineEditRealm</cstring>
         </property>
        </widget>
       </item>
@@ -354,14 +282,23 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
         </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Username</string>
-        </property>
-        <property name="buddy">
-         <cstring>lineEditUsername</cstring>
         </property>
        </widget>
       </item>
@@ -380,14 +317,23 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="layoutDirection">
          <enum>Qt::RightToLeft</enum>
         </property>
         <property name="text">
          <string>RtspServer.Properties.Authentication.Password</string>
-        </property>
-        <property name="buddy">
-         <cstring>lineEditPassword</cstring>
         </property>
        </widget>
       </item>
@@ -439,6 +385,12 @@
          </property>
          <item>
           <widget class="QLabel" name="labelTotalDataTitle">
+           <property name="maximumSize">
+            <size>
+             <width>110</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>RtspServer.Properties.Status.TotalDataSent</string>
            </property>
@@ -465,6 +417,12 @@
          </item>
          <item>
           <widget class="QLabel" name="labelBitrateTitle">
+           <property name="maximumSize">
+            <size>
+             <width>110</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>RtspServer.Properties.Status.Bitrate</string>
            </property>
@@ -518,17 +476,14 @@
     </widget>
    </item>
    <item>
-    <spacer name="RtspPropertiesverSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+    <widget class="QWidget" name="widgetFill" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
+    </widget>
    </item>
    <item alignment="Qt::AlignRight">
     <widget class="QWidget" name="widgetStartOrStop" native="true">
@@ -553,10 +508,22 @@
       </property>
       <item>
        <widget class="QPushButton" name="pushButtonStart">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>75</width>
           <height>23</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
@@ -572,10 +539,22 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButtonStop">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>75</width>
           <height>23</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
@@ -604,19 +583,14 @@
   </layout>
   <zorder>groupBoxTarget</zorder>
   <zorder>groupBoxOption</zorder>
+  <zorder>widgetFill</zorder>
   <zorder>groupBoxAuthentication</zorder>
   <zorder>widgetStartOrStop</zorder>
   <zorder>groupBoxStatus</zorder>
-  <zorder>RtspPropertiesverSpacer</zorder>
  </widget>
+ <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>checkBoxAuto</tabstop>
-  <tabstop>checkBoxAudioTrack1</tabstop>
-  <tabstop>checkBoxAudioTrack2</tabstop>
-  <tabstop>checkBoxAudioTrack3</tabstop>
-  <tabstop>checkBoxAudioTrack4</tabstop>
-  <tabstop>checkBoxAudioTrack5</tabstop>
-  <tabstop>checkBoxAudioTrack6</tabstop>
   <tabstop>spinBoxPort</tabstop>
   <tabstop>pushButtonAddressCopy</tabstop>
   <tabstop>checkBoxEnableAuthentication</tabstop>
