--- a/ui/rtsp_properties.ui
+++ b/ui/rtsp_properties.ui
@@ -452,40 +452,7 @@
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item>
-          <widget class="QLabel" name="labelTotalDataTitle">
-           <property name="text">
-            <string>RtspServer.Properties.Status.TotalDataSent</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="labelTotalData">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>60</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>0.0 MB</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="labelBitrateTitle">
-           <property name="text">
-            <string>RtspServer.Properties.Status.Bitrate</string>
-           </property>
-          </widget>
-         </item>
-         <item>
+         <item row="1" column="3">
           <widget class="QLabel" name="labelBitrate">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
@@ -504,7 +471,78 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="labelTotalDataTitle">
+           <property name="text">
+            <string>RtspServer.Properties.Status.TotalDataSent</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLabel" name="labelBitrateTitle">
+           <property name="text">
+            <string>RtspServer.Properties.Status.Bitrate</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLabel" name="labelTotalData">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>60</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>0.0 MB</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="labelFramesDroppedTitle">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>RtspServer.Properties.Status.DroppedFrames</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLabel" name="labelFramesDropped">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>60</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>0 / 0 (0.0%)</string>
+           </property>
+          </widget>
+         </item>
         </layout>
+        <zorder>labelBitrate</zorder>
+        <zorder>labelBitrateTitle</zorder>
+        <zorder>labelTotalData</zorder>
+        <zorder>labelTotalDataTitle</zorder>
+        <zorder>labelFramesDroppedTitle</zorder>
+        <zorder>labelFramesDropped</zorder>
        </widget>
       </item>
       <item>
